--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,6 +422,21 @@
     <string name="start_sale_empty_state">You have not recorded a sale yet.</string>
     <string name="start_sale_btn_label">Record a Sale</string>
     <string name="start_adding_customers_label">Start Adding Customers</string>
+    <string name="submit">Submit</string>
+    <string name="i_have_code_already">I have a reset code</string>
+    <string name="pwd_reset_msg">Sending password reset instructions. Please wait&#8230;</string>
+    <string name="prompt_password_reset_code">Reset Code</string>
+    <string name="prompt_new_password">New Password</string>
+    <string name="error_reset_code_required">Please enter reset code</string>
+    <string name="error_confirm_password_required">Please confirm password</string>
+    <string name="error_reset_password">Sorry we couldn\'t reset your password. Please try again later.</string>
+    <string name="error_reset_password_code_expired">Sorry! The reset password code has expired. Please request for a new code.</string>
+    <string name="password_reset_success">Your password has been successfully reset. Please login to Loystar with your new password.</string>
+    <string name="pwd_reset_in_progress_msg">Just a second. Resetting your password.</string>
+    <string name="reset_code_instructions">We have sent you a password reset code. Please retrieve it and use it on the next screen to reset your password.</string>
+    <string name="reset_pass_header_text">Submit your email address and we\'ll send you a code to reset your password.</string>
+    <string name="title_invalid_email">Invalid email</string>
+    <string name="feedback_pwdreset_noemail">No account registered with email:  </string>
 
     <string-array name="subs_duration">
         <item>@string/one_month</item>
@@ -429,4 +444,6 @@
         <item>@string/six_months</item>
         <item>@string/twelve_months</item>
     </string-array>
+    <string name="title_activity_confirm_password_reset">Confirm Password Reset</string>
+    <string name="error_password_required">Please enter password</string>
 </resources>
