--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -514,9 +514,10 @@
     <string name="stamps">Stamps</string>
     <string name="stamp">Stamp</string>
     <string name="print_receipt">Print Receipt</string>
-    <string name="no_bluetooth_adapter_available">No bluetooth adapter available</string>
-    <string name="bluetooth_opened">Bluetooth opened!</string>
-    <string name="data_sent_to_printer">Data has been sent to the printer</string>
+    <string name="no_bluetooth_adapter_available">Bluetooth not supported!!</string>
+    <string name="data_sent_to_printer">Data sent to printer</string>
     <string name="title_activity_bluetooth_devise_list">Bluetooth Device List</string>
     <string name="no_bluetooth_devises_available">No bluetooth devices available</string>
+    <string name="no_paired_bluetooth_devises_available">No paired bluetooth devices available</string>
+    <string name="bluetooth_device_found">Printer devise found!</string>
 </resources>
