--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,7 +518,7 @@
     <string name="data_sent_to_printer">Data sent to printer</string>
     <string name="title_activity_bluetooth_devise_list">Bluetooth Device List</string>
     <string name="no_bluetooth_devises_available">No bluetooth devices available</string>
-    <string name="no_paired_bluetooth_devises_available">No paired bluetooth devices available</string>
+    <string name="no_printer_devises_available">No printer devices available</string>
     <string name="bluetooth_device_found">Printer devise found!</string>
     <string name="openining_bluetooth_connection">Opening connection to printer.</string>
     <string name="transaction_complete">Transaction Complete</string>
