--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,8 @@
     <string name="title_customer_detail">Customer Detail</string>
     <string name="no_customers_found">We could not find any customers for you.</string>
     <string name="add_customer">Add customer</string>
-    <string name="customers_count">Customers (%1$s)</string>
+    <string name="customers_count">%1$s Customers </string>
+    <string name="customer_count">%1$s Customer </string>
     <string name="confirm_delete_positive">Delete</string>
     <string name="confirm_delete_negative">No don\'t delete!</string>
     <string name="action_search">Search</string>
