--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,7 @@
     <string name="select_customer">Select customer</string>
     <string name="customer_autocomplete_hint">Enter customer name or number</string>
     <string name="select_loyalty_program">Select loyalty program</string>
+    <string name="select_loyalty_program_short">Select program</string>
     <string name="select_one_prompt">Select one</string>
     <string name="error_select_customer">Please select customer</string>
     <string name="error_loyalty_program_required">Please select loyalty program</string>
