--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -530,4 +530,5 @@
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <string name="default_notification_channel_name">Orders</string>
     <string name="title_activity_searchable">Search Customer</string>
+    <string name="title_activity_pos_sale_confirmation">Transaction Confirmation</string>
 </resources>
