set loyalty program select for product create and update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -458,4 +458,8 @@
     <string name="cashier_only">CashierOnly</string>
     <string name="kitchen_only">KitchenOnly</string>
     <string name="print_for">Print for</string>
+    <string name="loyalty_program">Loyalty Program</string>
+    <string name="product_loyalty_program_explanation">By setting a loyalty program, customers can target the reward of this program by spending on this product or service.</string>
+    <string name="error_product_category_required">Please select product category</string>
+    <string name="update_product">Update product</string>
 </resources>
