--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,8 +256,8 @@
     <string name="pref_check_sms_bal_title">Check SMS Balance</string>
     <string name="pref_check_sms_bal_key">check_sms_balance</string>
     <string name="pref_sign_out_key">sign_out</string>
-    <string name="pref_support_key">account_support</string>
-    <string name="pref_support_title">Support</string>
+    <string name="pref_support_key">customer_support</string>
+    <string name="pref_support_title">Customer Support</string>
     <string name="pref_sign_out_title">Sign out</string>
     <string name="merchant_sign_up_pref">co.loystar.loystarbusiness.merchant_sign_up_pref</string>
     <string name="pref_app_version_key">app_version</string>
@@ -464,4 +464,6 @@
     <string name="update_product">Update product</string>
     <string name="back_to_home">Back to home</string>
     <string name="order_received">You have received a new order!</string>
+    <string name="pref_loyalty_programs">Loyalty Programs</string>
+    <string name="pref_loyalty_programs_key">pref_loyalty_programs</string>
 </resources>
