--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -448,7 +448,7 @@
     <string name="action_process_order">Process Order</string>
     <string name="pending">pending</string>
     <string name="completed">completed</string>
-    <string name="no_orders_recieved">Sorry! you have not received any orders yet.</string>
+    <string name="no_orders_received">Sorry! you have not received any orders yet.</string>
     <string name="view_orders"><u>View Orders</u></string>
     <string name="rejected">rejected</string>
     <string name="view">View</string>
@@ -466,4 +466,5 @@
     <string name="order_received">You have received a new order!</string>
     <string name="pref_loyalty_programs">Loyalty Programs</string>
     <string name="pref_loyalty_programs_key">pref_loyalty_programs</string>
+    <string name="orders">Orders</string>
 </resources>
