--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,7 +256,6 @@
     <string name="pref_check_sms_bal_title">Check SMS Balance</string>
     <string name="pref_check_sms_bal_key">check_sms_balance</string>
     <string name="pref_sign_out_key">sign_out</string>
-    <string name="pref_support_key">customer_support</string>
     <string name="pref_support_title">Customer Support</string>
     <string name="pref_sign_out_title">Sign out</string>
     <string name="merchant_sign_up_pref">co.loystar.loystarbusiness.merchant_sign_up_pref</string>
@@ -467,4 +466,11 @@
     <string name="pref_loyalty_programs">Loyalty Programs</string>
     <string name="pref_loyalty_programs_key">pref_loyalty_programs</string>
     <string name="orders">Orders</string>
+
+    <string name="settings_customer_support">settings_customer_support</string>
+    <string name="settings_general">settings_general</string>
+    <string name="settings_notifications">settings_notifications</string>
+    <string name="settings_data_and_sync">settings_data_and_sync</string>
+    <string name="settings_account">settings_account</string>
+    <string name="settings_products_and_services">settings_products_and_services</string>
 </resources>
