card payment dialog done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -489,4 +489,8 @@
     <string name="complete_payment">Complete Payment</string>
     <string name="include_customer_detail">Include customer detail</string>
     <string name="total_charge_label">Total charge</string>
+    <string name="confirm_payment">Confirm Payment</string>
+    <string name="card_payment_extra">* from card payment device</string>
+    <string name="card_payment">Card Payment</string>
+    <string name="cash_payment">Cash Payment</string>
 </resources>
